--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "docker_web_app",
   "version": "1.0.0",
   "description": "Node.js on Docker",
-  "author": "Bruno Godoy <bruno_apiou@hotmail.com>",
+  "author": "Ayrton Souza <ayrtonsouza@icloud.com>",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
